<resources>
    <string name="app_name">Inventory App</string>
    <string name="insert_fake_data">Insert fake data</string>
    <string name="delete_everything">Delete everything</string>
    <string name="activity_label">Inventory App</string>
    <string name="sk_cube">SK Cube</string>
    <string name="price">1000</string>
    <string name="quantity">2</string>
    <string name="supplier_phone">00234</string>
    <string name="supplier_name">SOSA</string>
    <string name="description">The best CubeSat ever built. Well at least we think so.</string>
    <string name="toast_missing_name_entry">Insert an item name</string>
    <string name="toast_missing_price_entry">Insert price</string>
    <string name="toast_missing_supplier_name_entry">Insert supplier name</string>
    <string name="toast_missing_supplier_phone_entry">Insert phone number</string>
    <string name="toast_missing_item_description">Insert item description</string>
    <string name="editor_insert_item_failed">Error, item not saved</string>
    <string name="editor_insert_item_successful">Save successful</string>
    <string name="editor_update_item_failed">Error, item not updated</string>
    <string name="editor_update_item_successful">Item update successful</string>
    <string name="unsaved_changes_dialog_msg">Quit without saving?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Continue editing</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_item_failed">Error, item not deleted</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="ask_price">Ask for a price</string>
    <string name="sold_out">Item is sold out</string>
    <string name="empty_view_title_text">There is nothing to show</string>
    <string name="empty_view_subtitle_text">Add an item whenever you feel like it</string>
    <string name="category_item">Item</string>
    <string name="category_product_name">Item</string>
    <string name="category_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="sale_button_text">Sale</string>
    <string name="hint_item_name">Name of the item</string>
    <string name="hint_item_price">10</string>
    <string name="minus_button">-</string>
    <string name="default_quantity">0</string>
    <string name="plus_button">+</string>
    <string name="category_supplier">Supplier\'s name</string>
    <string name="hint_item_supplier">SOSA</string>
    <string name="category_phone">Supplier\'s phone</string>
    <string name="hint_supplier_phone">001234</string>
    <string name="category_description">Description</string>
    <string name="hint_item_description">Describe the item</string>
    <string name="contact_supplier_button">Contact Supplier</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
</resources>
