<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorEditorBackground"
    android:orientation="vertical"
    android:padding="@dimen/general_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_item" />

        <EditText
            android:id="@+id/edit_item_name"
            style="@style/EditorStyle"
            android:hint="@string/hint_item_name"
            android:inputType="textCapSentences" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_price" />

        <EditText
            android:id="@+id/edit_item_price"
            style="@style/EditorStyle"
            android:hint="@string/hint_item_price"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="@dimen/general_margin">

            <Button
                android:id="@+id/edit_remove_item_button"
                style="@style/ButtonQuantity"
                android:layout_width="52dp"
                android:text="@string/minus_button" />

            <TextView
                android:id="@+id/edit_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_quantity"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/edit_add_item_button"
                style="@style/ButtonQuantity"
                android:text="@string/plus_button" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <EditText
            android:id="@+id/edit_item_supplier"
            style="@style/EditorStyle"
            android:hint="@string/hint_item_supplier"
            android:inputType="textCapWords" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_phone" />

        <EditText
            android:id="@+id/edit_supplier_phone"
            style="@style/EditorStyle"
            android:hint="@string/hint_supplier_phone"
            android:inputType="phone"
            android:maxLength="16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_description" />

        <EditText
            android:id="@+id/edit_item_description"
            style="@style/EditorStyle"
            android:hint="@string/hint_item_description"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/call_supplier_button"
        style="@style/Button"
        android:text="@string/contact_supplier_button" />
</LinearLayout>
