<?xml version="1.0" encoding="utf-8"?><!-- Layout for a single list item in the inventory -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorListBackground"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal"
    android:padding="@dimen/general_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/category_product_name"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/tv_item_name"
                style="@style/TextView"
                android:layout_weight="1"
                android:textColor="@color/colorTextHint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/category_price"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/tv_price"
                style="@style/TextView"
                android:textColor="@color/colorTextHint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/category_quantity"
                android:textColor="@color/colorTextPrimary" />

            <TextView
                android:id="@+id/tv_quantity"
                style="@style/TextView"
                android:textColor="@color/colorTextHint" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_sale"
        style="@style/ButtonSale"
        android:focusable="false"
        android:text="@string/sale_button_text" />

</LinearLayout>